BB-6003: FrontStore > Catalog > It appears horizontal scrolling in grid - fixed horizontal scroll on mobile devices on catalog list view

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -12,6 +12,12 @@
   &__list {
     @include list-normalize();
 
+    &_list-view {
+      @media (max-width: $screen-sm) {
+        overflow: hidden;
+      }
+    }
+
     &_gallery-view {
       display: flex;
 
@@ -152,11 +158,6 @@
       overflow: hidden;
       border: 1px solid get-color('additional', 'light');
 
-      /*@media (min-width: 768px) and (max-width: 991px) {
-        width: 31.2%;
-        max-width: 100%;
-      }*/
-
       @media (max-width: $screen-sm) {
         min-width: 110px;
       }
@@ -229,12 +230,12 @@
   &__primary-content {
     &_list-view {
       float: left;
-      width: 52.6%;
+      width: calc(100% - 23% - 25%);
       padding: 0 30px;
 
-      /*@media (min-width: 768px) and (max-width: 991px) {
-        width: 47.8%;
-      }*/
+      @media (max-width: $screen-md) {
+        width: calc(100% - 23% - 240px);
+      }
 
       @media (max-width: $screen-sm) {
         float: none;
@@ -314,11 +315,11 @@
 
     &_list-view {
       float: left;
-      width: 24.4%;
+      width: 25%;
 
-      /*@media (min-width: 768px) and (max-width: 991px) {
-        width: 21%;
-      }*/
+      @media (max-width: $screen-md) {
+        width: 240px;
+      }
 
       @media (max-width: $screen-sm) {
         float: none;
@@ -489,10 +490,6 @@
 
       font-size: 19px;
       line-height: 1.3;
-
-      /*@media (min-width: 768px) and (max-width: 991px) {
-        width: calc(100% - 31.2%);
-      }*/
 
       @media (max-width: $screen-sm) {
         float: none;
@@ -804,6 +801,10 @@
 
     @media (max-width: $screen-md) {
       padding: 20px 0;
+    }
+
+    @media (max-width: $screen-sm) {
+      display: block;
     }
   }
 
